# memecyclers

./: Cargo.toml  Readme.md  diesel.toml
client/: index.html
db/: docker-compose.yml
migrations/2024-06-24-024605_create_rides/: down.sql  up.sql
migrations/2024-08-04-184620_add_date_rides/: up.sql
server/: .env  Cargo.toml  Rocket.toml  diesel.toml  test.json
server/db/: docker-compose.yml
server/migrations/2024-08-04-184620_add_date_rides/: down.sql
server/migrations/2024-11-26-012623_create_ride_data_table/: down.sql  up.sql
server/migrations/2024-12-28-033719_add_table_to_store_geojson/: down.sql  up.sql
server/src/: main.rs  models.rs  routes.rs  schema.rs  tests.rs  utils.rs
server/storage/: readme.md  test.fit
server/test/: get_all.sh  test.fit  test_data.sh  test_no_data.sh  webtest.sh  whatever.json
src/: libs.rs  main.rs  models.rs  schema.rs  tests.rs
test/: test.json  test_post.json  webtest.bash  webtest.sh
