[package]
name = "memecyclers"
version = "1.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"]}
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4"]}
